--- a/EventApplication/EventApplication/Views/Order/Register.cshtml
+++ b/EventApplication/EventApplication/Views/Order/Register.cshtml
@@ -4,15 +4,15 @@
     ViewBag.Title = "Register";
 }
 
-<h2>Register</h2>
+<h1>Register</h1>
 
-
+Sales ends on @Model.StartDate
 <br />
 <form method="post" action="Register">
     @Html.AntiForgeryToken()
     <div>
 
-        <p>Sales ends on @Model.StartDate</p>
+        <p></p>
 
         <input type="hidden" name="EventId" value="@Model.EventId" />
 
@@ -31,23 +31,33 @@
 
             <tr>
                 <td>@Model.Title</td>
-                <td>@Model.AvailableTickets</td>
+
+
+                @**<td>@Model.AvailableTickets</td>*@
             </tr>
 
             <tr>
                 <td>FREE</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+
+
                 <td>
                     <select name="NumberOfTickets">
                         <option>1</option>
                         <option>2</option>
                         <option>3</option>
-                        <option>1</option>
-                        <option>1</option>
-                        <option>1</option>
-                        <option>1</option>
-                        <option>1</option>
-                        <option>1</option>
-                        <option>1</option>
+                        <option>4</option>
+                        <option>5</option>
+                        <option>6</option>
+                        <option>7</option>
+                        <option>8</option>
+                        <option>9</option>
+                        <option>10</option>
                     </select>
                 </td>
             </tr>
