--- a/EventApplication/EventApplication/Views/Shared/_Layout.cshtml
+++ b/EventApplication/EventApplication/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     @Scripts.Render("~/bundles/jquery")
                     <li class="first">
                         <a href="@Url.Action("Index", "Event")"
-                           id="Event">Find an Events</a>
+                           id="Event">Find an event</a>
                     </li>
                     <li>
                         <a href="@Url.Action("Create", "Event")"
@@ -57,7 +57,7 @@
             </li>
         </ul>
     </div>
-    <div class="container body-content">
+    @**<div class="container body-content">*@
         @RenderBody()
         <hr />
         <footer>
