--- a/EventApplication/EventApplication/Views/Event/Create.cshtml
+++ b/EventApplication/EventApplication/Views/Event/Create.cshtml
@@ -4,14 +4,15 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+@**<h2>Create</h2>*@
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Event</h4>
+        <h4>Organize an Event</h4>
+        <p>Event</p>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -127,6 +128,6 @@
 }
     *@
 
-    @Html.ActionLink("Back to Home", "Index")
+    @Html.ActionLink("Back to Home", "Index")|
     @Html.ActionLink("Create a new Event Type", "Create","EventType")
 </div>
