--- a/EventApplication/EventApplication/Views/EventType/Create.cshtml
+++ b/EventApplication/EventApplication/Views/EventType/Create.cshtml
@@ -4,14 +4,15 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+@**<h2>Create</h2>*@
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>EventType</h4>
+        <h4>Create</h4>
+        <p>EventType</p>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -31,5 +32,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Organizing an event!", "Index")
 </div>
